# Tap-Daw

./: .gitignore  BUILD_DAW.bat  BUILD_ID.txt  BUILD_NOTES.md  CHECKLIST.md  CODING_OBJECTIVES.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_CIRCADIAN.md  INTEGRATION.md  PLUGIN_SUMMARY.md  QUICK_START.md  README.md  README_NEXT_SESSION.md  SESSION_SUMMARY.md  TAPGTP_All_Enhanced_Formulas_Only.csv  Tap-Daw-main.code-workspace  _codeql_detected_source_root  auto_coder.py  overlay_integration.md  pyproject.toml  quick_run.ps1  requirements.txt  run_autocoder.ps1
MyDAW/: CMakeLists.txt  README.md
MyDAW/_codeql_build_dir/: MyDAW  test_circadian_phase
MyDAW/app/: main.cpp
MyDAW/arrange/: Playlist.h  TimelineBridge.h
MyDAW/config/: keymap_protools.json
MyDAW/docs/: CIRCADIAN_PHASE_SYSTEM.md
MyDAW/engine/: AudioEngineRT.cpp  AudioEngineRT.h  Node.h
MyDAW/include/: AlignmentLedger.h  CircadianGUI.h  CircadianPhaseManager.h  TelemetrySystem.h
MyDAW/include/midi/: pattern.hpp  scheduler.hpp  timing.hpp
MyDAW/pads/: PadSampler.h
MyDAW/plugins/: CMakeLists.txt  README.md
MyDAW/plugins/analytica_vaccine/: CMakeLists.txt
MyDAW/plugins/analytica_vaccine/docs/: README.md
MyDAW/plugins/analytica_vaccine/include/: AnalyticaVaccine.h
MyDAW/plugins/analytica_vaccine/src/: AnalyticaVaccine.cpp
MyDAW/plugins/fractal_remixer/: CMakeLists.txt
MyDAW/plugins/fractal_remixer/docs/: README.md
MyDAW/plugins/fractal_remixer/include/: FractalRemixer.h
MyDAW/plugins/fractal_remixer/src/: FractalRemixer.cpp
MyDAW/plugins/momentum_delay/: CMakeLists.txt
MyDAW/plugins/momentum_delay/docs/: README.md
MyDAW/plugins/momentum_delay/include/: MomentumDelay.h
MyDAW/plugins/momentum_delay/src/: MomentumDelay.cpp
MyDAW/plugins/nostalgia_tron/: CMakeLists.txt
MyDAW/plugins/nostalgia_tron/docs/: README.md
MyDAW/plugins/nostalgia_tron/include/: NostalgiaTron.h
MyDAW/plugins/nostalgia_tron/src/: NostalgiaTron.cpp
MyDAW/plugins/quantum_80/: CMakeLists.txt
MyDAW/plugins/quantum_80/docs/: README.md
MyDAW/plugins/quantum_80/include/: Quantum80.h
MyDAW/plugins/quantum_80/src/: Quantum80.cpp
MyDAW/plugins/rhythm_composer/: CMakeLists.txt
MyDAW/plugins/rhythm_composer/docs/: README.md
MyDAW/plugins/rhythm_composer/include/: RhythmComposer.h
MyDAW/plugins/rhythm_composer/src/: RhythmComposer.cpp
MyDAW/plugins/sonnet_composer/: CMakeLists.txt
MyDAW/plugins/sonnet_composer/docs/: README.md
MyDAW/plugins/sonnet_composer/include/: SonnetComposer.h
MyDAW/plugins/sonnet_composer/src/: SonnetComposer.cpp
MyDAW/plugins/velocity_eq/: CMakeLists.txt
MyDAW/plugins/velocity_eq/docs/: README.md
MyDAW/plugins/velocity_eq/include/: VelocityEQ.h
MyDAW/plugins/velocity_eq/src/: VelocityEQ.cpp
MyDAW/src/: AlignmentLedger.cpp  CircadianGUI.cpp  CircadianPhaseManager.cpp  TelemetrySystem.cpp
MyDAW/src/midi/: scheduler.cpp
MyDAW/tests/: test_circadian_phase.cpp
MyDAW/tests/smoke/: session.json
contracts/: .gitignore  README.md  hardhat.config.js  package-lock.json  package.json
contracts/contracts/: ProofOfAction.sol
contracts/test/: ProofOfAction.test.js
sdk/proof-spec/: README.md  package-lock.json  package.json  tsconfig.json
sdk/proof-spec/src/: index.ts
sdk/proof-spec/test/: index.test.ts
